# undermoon

./: AETHEL GRID (2).md  BEACON.md  CALL.md  EXPLAINER.md  ORIGIN.md  README.md  ROLLOUT.md  STEWARDSHIP.md
.github/: FUNDING.yml
aethel-grid/rust-validator/: Cargo.toml
aethel-grid/rust-validator/src/: lib.rs  main.rs
docs/: BOOK_OF_ALPHA_INTELLIGENCE.md
