[package]
name = "aethel-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = [
    "tcp", "dns", "noise", "yamux", "kad", "gossipsub",
    "macros", "tokio", "serde"
]}
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[build-dependencies]
cc = "1.0"
